--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,8 +8,8 @@ $screen-xl-min: 1280px;
 $primary-font: 'Inter', sans-serif;
 
 // colors
-$primary-color: #48bf53;
-$primary-bold: #11823b;
+$primary-color: #e130a7;
+$primary-bold: #f018a8;
 $shadow-color: rgb(205, 205, 205);
 $hover-gray: rgb(238, 238, 238);
 $light-yellow: rgb(247, 247, 58);
@@ -17,3 +17,4 @@ $blue-color: #3c99dc;
 $red-color: #e20000;
 $pink-color: #ff5b5b;
 $gray-color: rgb(243 244 246 / var(--tw-bg-opacity));
+$linear-gradient-main: -webkit-linear-gradient(left, #00d39f 0%, #008bd3 25%, #d40063 75%, #d4be00 100%);
