--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,5 @@
 @import 'components/CancelButton';
 @import 'components/CheckBox';
 @import 'components/Loading';
+@import 'components/Header';
+@import 'components/Footer';
