--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,7 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  // box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: $primary-font;
+}
+
+html {
+  min-height: 100vh;
 }
 
 .text-primary {
