--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,6 @@
 @import 'components/Loading';
 @import 'components/Header';
 @import 'components/Footer';
+@import 'components/Carousel';
+@import 'components/Home';
+@import 'components/WhyUs';
