--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,3 +19,5 @@
 @import 'components/Carousel';
 @import 'components/Home';
 @import 'components/WhyUs';
+@import 'components/Services';
+@import 'components/Card';
