--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $primary-font: 'Inter', sans-serif;
 // colors
 $primary-color: #e130a7;
 $primary-bold: #f018a8;
+$secondary-color: #48bf53;
 $shadow-color: rgb(205, 205, 205);
 $hover-gray: rgb(238, 238, 238);
 $light-yellow: rgb(247, 247, 58);
