--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,5 +23,6 @@
 @import 'components/Card';
 @import 'components/BlogCard';
 @import 'components/BreadCrumb';
+@import 'components/Products';
 @import 'components/Product';
 @import 'components/SiteInfo';
