--- a/src/styles/components/BlogCard.scss
+++ b/src/styles/components/BlogCard.scss
@@ -15,6 +15,12 @@
   img:hover {
     transform: scale(1.5);
   }
+
+  .top {
+    .image {
+      max-height: 9rem;
+    }
+  }
 }
 
 @include md-down {
