Fix phone icon & contact link

--- a/src/styles/components/Card.scss
+++ b/src/styles/components/Card.scss
@@ -5,6 +5,10 @@
   position: relative;
   min-height: 20rem;
 
+  .bottom {
+    height: 8rem;
+  }
+
   .sale_tag {
     position: absolute;
     top: 1rem;
